base/deployment-nas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  template:
    spec:
      containers:
        - name: demo-app
          volumeMounts:
            - name: billcenter-nas-pvc
              mountPath: /opt/logs/
            - name: timezone
              mountPath: /etc/localtime
      volumes:
        - name: billcenter-nas-pvc
          persistentVolumeClaim:
            claimName: billcenter-nas-pvc
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
