base/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name:  demo-app
spec:
  selector:
    matchLabels:
      groups: onewo 
  replicas: 1 
  template:
    metadata:
      labels:
        groups: onewo 
    spec:
      containers:
      - name:  demo-app
        image: prod-ali-pkg.onewo.com/${IMAGE_NAME}:${IMAGE_TAG}
        ports:
        - containerPort: 7700
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred-jfrog
