base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    groups: onewo
  name: demo-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    groups: onewo 
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
